--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.10",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@studio-freight/react-lenis": "^0.0.47",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "gsap": "^3.12.5",
+    "lenis": "^1.0.44",
     "lucide-react": "^0.354.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sass": "^1.75.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
